--- a/SATPairedProgramming/SAT.UI.MVC/SAT.UI.MVC.csproj
+++ b/SATPairedProgramming/SAT.UI.MVC/SAT.UI.MVC.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\assets\css\custom.css" />
     <Content Include="Content\assets\css\flex-slider.css" />
     <Content Include="Content\assets\css\fontawesome.css" />
     <Content Include="Content\assets\css\lightbox.css" />
@@ -339,6 +340,8 @@
     <Content Include="Views\StudentStatus\Details.cshtml" />
     <Content Include="Views\StudentStatus\Edit.cshtml" />
     <Content Include="Views\StudentStatus\Index.cshtml" />
+    <Content Include="Views\Home\AdminMenu.cshtml" />
+    <Content Include="Views\Cours\CourseTiles.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SAT.DATA.EF\SAT.DATA.EF.csproj">
